--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+  margin: 0 auto;
+  background-color: #F2F1F1;
+  overflow: auto;
+  font-family: 'Poppins', sans-serif;
+
+}
 .linkSpan{
   color: #E50914;
   text-decoration: underline;
@@ -13,4 +20,43 @@
 .redlink{
   color: #E50914;
   cursor: pointer;
+}
+.circleShadow{
+  display: flex;
+  align-items: center;
+  background-color: white;
+  
+  padding: 1.3rem;
+  filter: drop-shadow(0px 4px 6px rgba(0, 0, 0, 0.25));
+  border-radius: 50%;
+}
+.actual{
+  transition: opacity 0.5s ease;
+  transition-delay: 1.5s;
+}
+.fade-in {
+  transition: opacity 1.5s ease;
+ 
+}
+
+.fade-out {
+  opacity: 0;
+  transition: opacity 1.5s ease;
+}
+.myCenter{
+  margin: 0 auto;
+  margin-top: 4rem;
+ 
+}
+.myCenter2{
+  margin: 0 auto;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+ 
+}
+.myCenter3{
+  margin: 0 auto;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+ 
 }
